[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/diffusers_vps_toolbox"]

[project]
name = "diffusers-vps-toolbox"
version = "0.1.0"
description = "A flexible, decoupled Python framework for orchestrating custom generative AI pipelines (Diffusers, Transformers)."
authors = [
    {name = "Kharma", email = "kharma@example.com"}
]
keywords = ["diffusers", "ai", "generative", "pipeline", "orchestration"]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "diffusers>=0.39.0",
    "kornia>=0.8.3",
    "pillow>=12.3.0",
    "pydantic>=2.5.0",
    "pyyaml>=6.0",
    "torch>=2.13.0",
    "torchvision>=0.28.0",
    "transformers>=5.13.0",
]

[project.scripts]
toolbox-gen-enums = "diffusers_vps_toolbox.registry.generator:main"

[dependency-groups]
dev = [
    "pytest>=9.1.1",
]
