[project]
name = "ai-pipeline-toolbox"
version = "0.3.0"
description = "A flexible, decoupled Python framework for orchestrating custom generative AI pipelines (Diffusers, Transformers)."
readme = "README.md"
requires-python = ">=3.13"
authors = [{ name = "Kharma", email = "kharma@example.com" }]
keywords = ["ai", "diffusers", "generative", "orchestration", "pipeline"]
dependencies = [
  "aria2p>=0.12.1",
  "pydantic>=2.5.0",
  "pyyaml>=6.0",
]

[project.scripts]
toolbox-gen-enums = "ai_pipeline_toolbox.registry.generator:main"

[dependency-groups]
dev = [
  "pytest>=9.1.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ai_pipeline_toolbox"]
